[gd_scene load_steps=7 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://ID.gd" type="Script" id=2]
[ext_resource path="res://BotBody.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="CircleShape2D" id=2]
radius = 196.879

[sub_resource type="CircleShape2D" id=3]
radius = 33.3008

[node name="Bot" type="KinematicBody2D"]
input_pickable = true
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="CollisionShape2D"]
scale = Vector2( 0.35, 0.35 )
texture = ExtResource( 1 )

[node name="ID" type="Label" parent="."]
margin_left = -20.0
margin_top = -27.0
margin_right = 20.0
margin_bottom = -13.0
text = "0"
align = 1
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Stats" type="Label" parent="."]
visible = false
margin_left = -17.1476
margin_top = 14.44
margin_right = 22.8524
margin_bottom = 28.44
text = "Stats:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Vision" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Vision"]
shape = SubResource( 2 )

[node name="PersonalSpace" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PersonalSpace"]
shape = SubResource( 3 )

[node name="DirectionChangeTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="BuildCooldownTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="SpreadOutTimer" type="Timer" parent="."]
wait_time = 0.5
[connection signal="mouse_entered" from="." to="." method="_on_KinematicBody2D_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_KinematicBody2D_mouse_exited"]
[connection signal="body_entered" from="Vision" to="." method="_on_Vision_body_entered"]
[connection signal="body_exited" from="Vision" to="." method="_on_Vision_body_exited"]
[connection signal="body_entered" from="PersonalSpace" to="." method="_on_PersonalSpace_body_entered"]
[connection signal="body_exited" from="PersonalSpace" to="." method="_on_PersonalSpace_body_exited"]
